:arrow_up: add logo

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -1,4 +1,4 @@
-.bg-poupex {
+.bg-tj {
     background-color: #254185;
 }
 
@@ -21,7 +21,6 @@
 .bg-red {
     background-color: #FF0000 !important;
 }
-
 
 .icon-lg {
     font-size: 30px;
@@ -64,21 +63,23 @@
     transition: .4s;
 }
 
-input:checked + .slider {
+input:checked+.slider {
     background-color: #2196F3;
 }
 
-input:focus + .slider {
+input:focus+.slider {
     box-shadow: 0 0 1px #2196F3;
 }
 
-input:checked + .slider:before {
+input:checked+.slider:before {
     -webkit-transform: translateX(26px);
     -ms-transform: translateX(26px);
     transform: translateX(26px);
 }
 
+
 /* Rounded sliders */
+
 .slider.round {
     border-radius: 34px;
 }
@@ -89,4 +90,8 @@ input:checked + .slider:before {
 
 .breadcrumb {
     padding-bottom: 0 !important;
+}
+
+#logo {
+    height: 100px;
 }
