--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -1,9 +1,12 @@
 {% extends "base.html" %}
 {% block title %} - LOGIN{% endblock %}
 {% block body %}
+
     <div class="row justify-content-center mt-5 ml-auto mr-auto">
         <div class="col-lg-5 col-md-7">
             <div class="card bg-secondary shadow border-0">
+                <img src="../static/images/favicon.png" id='logo' alt="" class="ml-auto mr-auto mt-4">
+
                 <div class="card-header bg-transparent pb-5">
                     <h2 class="text-center">Login</h2>
                 </div>
@@ -28,7 +31,7 @@
                                     {{ form.password() }}
                                 </div>
                                 <div class="text-center">
-                                    <button type="submit" id="submit" class="btn bg-poupex text-white my-4">Entrar</button>
+                                    <button type="submit" id="submit" class="btn bg-tj text-white my-4">Entrar</button>
                                 </div>
                             </div>
                         </div>
