--- a/app/templates/components/table_organizations.html
+++ b/app/templates/components/table_organizations.html
@@ -2,22 +2,33 @@
     <thead>
     <tr>
         <th>id</th>
-        <th>first name</th>
-        <th>last name</th>
+        <th>name</th>
+        <th>tell</th>
         <th>email</th>
+        <th>sector</th>
+        <th>address</th>
         <th>city</th>
-        <th>company name</th>
+        <th>description</th>
+        <th>free</th>
+        <th>id_area</th>
+        <th>id_attendance</th>
     </tr>
     </thead>
     <tbody>
     {% for item in data %}
         <tr>
             <th>{{ item['id'] }}</th>
-            <th>{{ item['first_name'] }}</th>
-            <th>{{ item['last_name'] }}</th>
+            <th>{{ item['name'] }}</th>
+            <th>{{ item['tell'] }}</th>
             <th>{{ item['email'] }}</th>
+            <th>{{ item['sector'] }}</th>
+            <th>{{ item['address'] }}</th>
             <th>{{ item['city'] }}</th>
-            <th>{{ item['company_name'] }}</th>
+            <th>{{ item['description'] }}</th>
+            <th>{{ item['free'] }}</th>
+            <th>{{ item['id_area'] }}</th>
+            <th>{{ item['id_attendance'] }}</th>
+
         </tr>
     {% endfor %}
     </tbody>
