:construction: Store Organization

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -23,21 +23,7 @@
             <a class="navbar-brand ml-auto mr-auto" href="#">
 
             </a>
-            <h3 class="mr-auto mt-2 text-white">JUSTIÇA COMUNITÁRIA -  ADMINISTRAÇÃO</h3>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-primary"
-                        aria-controls="navbar-primary" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbar-primary">
-
-                <div class="navbar-collapse-header">
-                    <div class="row">
-                        <div class="col-6 collapse-brand">
-                            <a href="/logout">Sair</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            <h3 class="mr-auto mt-2 text-white">JC - ADMINISTRAÇÃO</h3>
         </div>
     </nav>
 
