--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,12 +3,10 @@
 {% block body %}
     <div class="breadcrumb">
         <ul class="nav nav-tabs" id="myTab">
-
             <li class="nav-item">
                 <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab"
-                   aria-controls="home" aria-selected="true">Relatório</a>
+                   aria-controls="home" aria-selected="true">Informações</a>
             </li>
-
             <li class="nav-item">
                 <a class="nav-link" id="dados-array-tab" data-toggle="tab" href="#dados-array" role="tab"
                    aria-controls="dados-array" aria-selected="false">Organizações</a>
