:construction: Melhoria layout

--- a/app/templates/components/table_users.html
+++ b/app/templates/components/table_users.html
@@ -1,15 +1,10 @@
 <table class="table align-items-center table-flush table-bordered table-striped" id="table_api_example" width="100%">
     <thead>
     <tr>
-        <th>nome</th>
-        <th>idade</th>
-        <th>cpf</th>
-        <th>rg</th>
-        <th>data nascimento</th>
-        <th>celular</th>
-        <th>altura</th>
-        <th>peso</th>
-        <th>tipo sanguineo</th>
+        <td>Matricula</td>
+        <td>Email</td>
+        <td>Setor</td>
+        <td>Administrador</td>
     </tr>
     </thead>
 </table>
