:arrow_up: Melhoria Layout

--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}Cadstro Organização{% endblock %}
+{% block title %}Cadstro Usuário{% endblock %}
 {% block body %}
     <div class="row">
         <div class="col-xl-8 ml-auto mr-auto order-xl-1">
@@ -13,7 +13,6 @@
                 </div>
                 <div class="card-body">
                     <form>
-
                         <hr class="my-4">
                         <!-- Email -->
                         <div class="pl-lg-4">
@@ -33,7 +32,6 @@
                                        name="username">
                             </div>
                         </div>
-
                         <!-- Setor -->
                         <div class="pl-lg-4">
                             <div class="form-group focused">
@@ -63,7 +61,6 @@
                                        name="password">
                             </div>
                         </div>
-
                         <input type="submit" class="btn btn-info ml-auto mr-auto">
                     </form>
                 </div>
