--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -55,7 +55,7 @@
                 <h1 class="text-center text-dark">Usuários da aplicação!</h1>
                 <a href="/create-user" class="btn btn-done bg-animate">
                     <i class="ni ni-fat-add"></i>
-                    Adicionar nova Organização
+                    Adicionar novo usuário
                 </a>
                 <div class="card mb-4 mb-lg-0 mt-5">
                     <div class="table-responsive">
