--- a/app/templates/organizations/form.html
+++ b/app/templates/organizations/form.html
@@ -1,129 +1,109 @@
 {% extends "base.html" %}
-{% block title %}Cadstro Organização{% endblock %}
+{% block title %}Formulário de  Organização{% endblock %}
 {% block body %}
     <div class="row">
-        <div class="col-xl-8 ml-auto mr-auto order-xl-1">
-            <div class="card bg-secondary shadow">
-                <div class="card-header bg-white border-0">
-                    <div class="row align-items-center">
-                        <div class="col-8">
-                            <h3 class="mb-0">Formulário de organização!</h3>
+
+        <div class="container">
+            <h1 class="text-center">
+                Formulário de organização
+            </h1>
+            <form class="card text-center pl-2 pr-2">
+                <h1 class="text-center">Dados da organização</h1>
+
+                <div class="row">
+                    <div class="col-sm-12 col-lg-6">
+                        <label class="form-control-label" for="input-name">Nome da Organização</label>
+                        <input type="text" id="input-name"
+                               class="form-control form-control-alternative"
+                               placeholder="Digite aqui o nome da organização"
+                               name="name">
+                    </div>
+                    <div class="col-sm-12 col-lg-6">
+                        <label class="form-control-label" for="area">Area</label>
+                        <select class="form-control" id="area">
+                            <option value="">Informe A área</option>
+                            <option>Júridica</option>
+                            <option>Social</option>
+                            <option>Educacional</option>
+                        </select>
+                    </div>
+                    <div class="col-sm-12 col-lg-3 ml-auto mr-auto mt-3">
+                        <div class="custom-control custom-checkbox">
+                            <input type="checkbox" class="custom-control-input" id="free" name="free">
+                            <label class="custom-control-label" for="free">Serviço Gratuito</label>
                         </div>
                     </div>
                 </div>
-                <div class="card-body">
-                    <form>
-                        <h6 class="heading-small text-muted mb-4">Informações da organização</h6>
-                        <div class="row text-center">
-                            <div class="ml-auto mr-auto col-10">
-                                <div class="form-group focused">
-                                    <label class="form-control-label" for="input-name">Nome da Organização</label>
-                                    <input type="text" id="input-name"
-                                           class="form-control form-control-alternative"
-                                           placeholder="Digite aqui o nome da organização"
-                                           name="name">
-
-
-                                    <label class="form-control-label" for="area">Area</label>
-                                    <select class="form-control" id="area">
-                                        <option value="">Informe A área</option>
-                                        <option>Júridica</option>
-                                        <option>Social</option>
-                                        <option>Educacional</option>
-                                    </select>
-
-                                    <div class="custom-control custom-checkbox mb-3">
-                                        <input class="custom-control-input" id="free" type="checkbox"
-                                               name="free">
-                                        <label class="custom-control-label" for="free">Serviço Gratuito</label>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <hr class="my-4">
-                        <!-- Address -->
-                        <h6 class="heading-small text-muted mb-4">Contatos e Localização
-                            <i class="ni ni-pin-3"></i>
-                        </h6>
-                        <div class="pl-lg-6">
-                            <div class="row text-center">
-                                <div class="row ml-auto mr-auto">
-                                    <div class="form-group ml-2 mr-2">
-                                        <label class="form-control-label" for="input-email">Email</label>
-                                        <input type="email" id="input-email"
-                                               class="form-control form-control-alternative"
-                                               placeholder="org@exemplo.com">
-                                    </div>
-                                    <div class="form-group focused ml-2 mr-2">
-                                        <label class="form-control-label" for="input-tell">Telefone da
-                                            Organização</label>
-                                        <input type="text" id="input-tell"
-                                               class="form-control form-control-alternative"
-                                               placeholder="(61) 3333-3333"
-                                               name="tell">
-                                    </div>
-                                    <div class="form-group focused">
-                                        <label class="form-control-label" for="input-address">Endereço</label>
-                                        <input id="input-address" class="form-control form-control-alternative"
-                                               placeholder="Endereço da organização"
-                                               value="QNJ 08 area especial 01" type="text">
-                                    </div>
-                                    <div class="form-group focused">
-                                        <label class="form-control-label" for="input-city">Cidade</label>
-                                        <input type="text" id="input-city" class="form-control form-control-alternative"
-                                               placeholder="City" value="Ceilândia">
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <hr class="my-4">
-                        <div class="text-center">
-                            <h6 class="heading small text-muted mb-4">Horario de Funcionamento</h6>
-                            <i class="ni ni-watch-time"></i>
-                            <br>
-                            <div class="row">
-                                <div class="col-4">
-                                    <label class="form-control-label" for="input-name">Hora inicial</label>
-
-                                    <input type="time" id="input-name"
-                                           class="form-control form-control-alternative"
-                                           name="name">
-                                </div>
-                                <div class="col-4">
-                                    <label class="form-control-label" for="input-name">Hora Final</label>
-                                    <input type="time" id="input-name"
-                                           class="form-control form-control-alternative"
-                                           name="name">
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-4">
-                                    <label class="form-control-label" for="input-name">Hora Inicial do intervalo</label>
-                                    <input type="time" id="input-name"
-                                           class="form-control form-control-alternative"
-                                           name="name">
-                                </div>
-                                <div class="col-4">
-                                    <label class="form-control-label" for="input-name">Hora Final do intervalo</label>
-                                    <input type="time" id="input-name"
-                                           class="form-control form-control-alternative"
-                                           name="name">
-                                </div>
-                            </div>
-                        </div>
-                        <hr class="my-4">
-                        <!-- Description -->
-                        <div class="pl-lg-4">
-                            <div class="form-group focused">
-                                <label>Detalhe um pouco a organização</label>
-                                <textarea rows="5" class="form-control form-control-alternative"
-                                          placeholder=""></textarea>
-                            </div>
-                        </div>
-                        <input type="submit" class="btn btn-info ml-auto mr-auto">
-                    </form>
+                <hr>
+                <h1 class="text-center">Contatos e localização</h1>
+                <div class="row">
+                    <div class="col-sm-12  col-lg-6">
+                        <label class="form-control-label" for="input-email">Email</label>
+                        <input type="email" id="input-email"
+                               class="form-control form-control-alternative"
+                               placeholder="org@exemplo.com">
+                    </div>
+                    <div class="col-sm-12 col-lg-6 ml-auto mr-auto">
+                        <label class="form-control-label" for="input-tell">Telefone da
+                            Organização</label>
+                        <input type="text" id="input-tell"
+                               class="form-control form-control-alternative"
+                               placeholder="(61) 3333-3333"
+                               name="tell">
+                    </div>
                 </div>
-            </div>
+                <div class="row">
+                    <div class="col-sm-12 col-lg-8">
+                        <label class="form-control-label" for="input-address">Endereço</label>
+                        <input id="input-address" class="form-control form-control-alternative"
+                               placeholder="Endereço da organização"
+                               value="QNJ 08 area especial 01" type="text">
+                    </div>
+                    <div class="col-sm-12 col-lg-4">
+                        <label class="form-control-label" for="city">Cidade</label>
+                        <select class="form-control" id="area">
+                            <option value="">Informe A Cidade</option>
+                            <option>Ceilândia</option>
+                        </select>
+                    </div>
+                </div>
+                <hr>
+                <h1>Horario de atendimento</h1>
+                <div class="row">
+                    <div class="col-sm-3">
+                        <label class="form-control-label" for="input-name">Hora inicial</label>
+                        <input type="time" id="input-name"
+                               class="form-control form-control-alternative"
+                               name="name">
+                    </div>
+                    <div class="col-sm-3">
+                        <label class="form-control-label" for="input-name">Hora Final</label>
+                        <input type="time" id="input-name"
+                               class="form-control form-control-alternative"
+                               name="name">
+                    </div>
+                    <div class="col-sm-3">
+                        <label class="form-control-label" for="input-name">Hora Inicial do intervalo</label>
+                        <input type="time" id="input-name"
+                               class="form-control form-control-alternative"
+                               name="name">
+                    </div>
+                    <div class="col-sm-3">
+
+                        <label class="form-control-label" for="input-name">Hora Final do intervalo</label>
+                        <input type="time" id="input-name"
+                               class="form-control form-control-alternative"
+                               name="name">
+                    </div>
+                </div>
+                <hr>
+                <div class="col-sm-12">
+                    <label>Detalhe um pouco a organização</label>
+                    <textarea rows="5" class="form-control form-control-alternative"
+                              placeholder="Detalhe aqui o que deseja"></textarea>
+                </div>
+                <input type="submit" class="btn btn-info">
+            </form>
         </div>
     </div>
 {% endblock %}
