:arrow_up: Cidades

--- a/app/templates/organizations/form.html
+++ b/app/templates/organizations/form.html
@@ -61,7 +61,7 @@
                     </div>
                     <div class="col-sm-12 col-lg-4">
                         <label class="form-control-label" for="city">Cidade</label>
-                        <select class="form-control" id="area">
+                        <select class="form-control" id="city">
                             <option value="">Informe A Cidade</option>
                             <option>Ceilândia</option>
                         </select>
@@ -106,4 +106,5 @@
             </form>
         </div>
     </div>
+    <script src="../../static/js/form_organizations.js" defer></script>
 {% endblock %}
