:art: [update] form date attendence

--- a/app/templates/organizations/form.html
+++ b/app/templates/organizations/form.html
@@ -75,15 +75,69 @@
                         <input type="time" id="input-name"
                                class="form-control form-control-alternative"
                                name="name">
+                        <input type="time" id="input-name"
+                               class="form-control form-control-alternative"
+                               name="name">
+                        <input type="time" id="input-name"
+                               class="form-control form-control-alternative"
+                               name="name">
+                        <input type="time" id="input-name"
+                               class="form-control form-control-alternative"
+                               name="name">
+                        <input type="time" id="input-name"
+                               class="form-control form-control-alternative"
+                               name="name">
+                        <input type="time" id="input-name"
+                               class="form-control form-control-alternative"
+                               name="name">
+                        <input type="time" id="input-name"
+                               class="form-control form-control-alternative"
+                               name="name">
                     </div>
                     <div class="col-sm-3">
                         <label class="form-control-label" for="input-name">Hora Final</label>
                         <input type="time" id="input-name"
                                class="form-control form-control-alternative"
                                name="name">
+                        <input type="time" id="input-name"
+                               class="form-control form-control-alternative"
+                               name="name">
+                        <input type="time" id="input-name"
+                               class="form-control form-control-alternative"
+                               name="name">
+                        <input type="time" id="input-name"
+                               class="form-control form-control-alternative"
+                               name="name">
+                        <input type="time" id="input-name"
+                               class="form-control form-control-alternative"
+                               name="name">
+                        <input type="time" id="input-name"
+                               class="form-control form-control-alternative"
+                               name="name">
+                        <input type="time" id="input-name"
+                               class="form-control form-control-alternative"
+                               name="name">
                     </div>
                     <div class="col-sm-3">
                         <label class="form-control-label" for="input-name">Hora Inicial do intervalo</label>
+                        <input type="time" id="input-name"
+                               class="form-control form-control-alternative"
+                               name="name">
+                        <input type="time" id="input-name"
+                               class="form-control form-control-alternative"
+                               name="name">
+                        <input type="time" id="input-name"
+                               class="form-control form-control-alternative"
+                               name="name">
+                        <input type="time" id="input-name"
+                               class="form-control form-control-alternative"
+                               name="name">
+                        <input type="time" id="input-name"
+                               class="form-control form-control-alternative"
+                               name="name">
+                        <input type="time" id="input-name"
+                               class="form-control form-control-alternative"
+                               name="name">
                         <input type="time" id="input-name"
                                class="form-control form-control-alternative"
                                name="name">
@@ -94,7 +148,32 @@
                         <input type="time" id="input-name"
                                class="form-control form-control-alternative"
                                name="name">
+                        <input type="time" id="input-name"
+                               class="form-control form-control-alternative"
+                               name="name">
+                        <input type="time" id="input-name"
+                               class="form-control form-control-alternative"
+                               name="name">
+                        <input type="time" id="input-name"
+                               class="form-control form-control-alternative"
+                               name="name">
+                        <input type="time" id="input-name"
+                               class="form-control form-control-alternative"
+                               name="name">
+                        <input type="time" id="input-name"
+                               class="form-control form-control-alternative"
+                               name="name">
+                        <input type="time" id="input-name"
+                               class="form-control form-control-alternative"
+                               name="name">
                     </div>
+                    <div class="col-sm-1">
+                        <input type="checkbox" id="fds" name="fds"
+                               checked>
+                        <label for="fds">Incluir FDS</label>
+                    </div>
+
+
                 </div>
                 <hr>
                 <div class="col-sm-12">
